# chess-engine

./: .gitignore  AlfaBeta.cpp  AlfaBeta.h  Board.cpp  Board.h  Board_unittest.cpp  CMakeLists.txt  Game.cpp  Game.h  LICENSE  Makefile  Piece.cpp  Piece.h  Piece_unittest.cpp  README.md  Types.cpp  Types.h  main.cpp
include/: AlfaBeta.h  Board.h  Game.h  Piece.h  Types.h
src/: Board.cpp  Piece.cpp  main.cpp
tests/: Board_unittest.cpp
